--- a/project/app/templates/Principal/PrincipalDash.html
+++ b/project/app/templates/Principal/PrincipalDash.html
@@ -76,7 +76,7 @@
         </a>
             
         <div>
-            <p>Name :  {{principal.user.username}}</p><p>{{principal.user.last_name}}</p>
+            <p>Name :  {{principal.user.first_name}}</p><p>{{principal.user.last_name}}</p>
             {% comment %} <p>Date Of Join : {{principal.principal_Doj}}</p> {% endcomment %}
         </div>
     </div>
