--- a/project/app/templates/faculty/FacultyNotes.html
+++ b/project/app/templates/faculty/FacultyNotes.html
@@ -158,7 +158,7 @@
                     </thead>
                     <tbody class="text-white">
                         {% for note in notes %}
-                        <tr class="text-white">
+                        <tr class="text-black">
                             <td>{{ note.id }}</td>
                             <td>{{ note.module }}</td>
                             <td>{{ note.subject }}</td>
