--- a/project/app/templates/hod/HodAttendance.html
+++ b/project/app/templates/hod/HodAttendance.html
@@ -102,7 +102,7 @@
         <img class="rounded-full w-[4rem] h-[4rem] border-red-500 border-2 " src="{{hod.Hod_Profile.url}}" alt="profile" >
         
         <div >
-            <p>Name : {{hod.user.first_name}}</p>
+            <p>Name : {{hod.user.first_name}} {{hod.user.last_name}}</p>
             <p>Designation : {{hod.Hod_Designation}}</p>
             {% comment %} <p>Date Of Join : {{hod.Hod_Doj}}</p> {% endcomment %}
         </div>
